updated pagekit-one theme

--- a/themes/one/less/uikit/alert.less
+++ b/themes/one/less/uikit/alert.less
@@ -25,7 +25,7 @@
 // Component
 // ========================================================================
 
-.hook-alert() { border-radius: @global-border-radius; }
+.hook-alert() {}
 
 
 // Modifier: `uk-alert-success`
