--- a/themes/one/less/uikit/datepicker.less
+++ b/themes/one/less/uikit/datepicker.less
@@ -31,7 +31,7 @@
 
 .hook-datepicker-nav-item() {}
 
-.hook-datepicker-table-item() { border-radius: @global-border-radius; }
+.hook-datepicker-table-item() {}
 
 .hook-datepicker-table-item-hover() {}
 
