--- a/themes/one/less/uikit/form.less
+++ b/themes/one/less/uikit/form.less
@@ -62,7 +62,7 @@
 // Component
 // ========================================================================
 
-.hook-form() { border-radius: @global-border-radius; }
+.hook-form() {}
 
 // Focus state
 .hook-form-focus() {}
