--- a/themes/one/less/uikit/nav.less
+++ b/themes/one/less/uikit/nav.less
@@ -31,7 +31,7 @@
 @nav-side-hover-color:                          @global-color;
 @nav-side-active-background:                    @global-default-background;
 @nav-side-active-color:                         @global-color;
-@nav-side-header-color:                         @global-muted-color;
+@nav-side-header-color:                         @global-dark-color;
 @nav-side-divider-border:                       @global-border;
 @nav-side-nested-color:                         @global-muted-color;
 @nav-side-nested-hover-color:                   @global-color;
@@ -45,12 +45,12 @@
 @nav-dropdown-nested-hover-color:               @global-color;
 
 @nav-navbar-color:                              @global-color;
-@nav-navbar-hover-background:                   @global-default-background;
-@nav-navbar-hover-color:                        @global-color;
+@nav-navbar-hover-background:                   transparent;
+@nav-navbar-hover-color:                        @global-dark-color;
 @nav-navbar-header-color:                       @global-color;
 @nav-navbar-divider-border:                     @global-border;
 @nav-navbar-nested-color:                       @global-muted-color;
-@nav-navbar-nested-hover-color:                 @global-color;
+@nav-navbar-nested-hover-color:                 @global-dark-color;
 
 @nav-offcanvas-color:                           @offcanvas-panel-link-color;
 @nav-offcanvas-hover-background:                lighten(@offcanvas-bar-background, 5%);
