--- a/themes/one/less/uikit/nestable.less
+++ b/themes/one/less/uikit/nestable.less
@@ -37,10 +37,7 @@
 
 .hook-nestable-toggle() {}
 
-.hook-nestable-panel() {
-	border-radius: @global-border-radius;
-    border: 1px solid @nestable-border;
-}
+.hook-nestable-panel() { border: 1px solid @nestable-border; }
 
 
 // Miscellaneous
