--- a/themes/one/less/uikit/pagination.less
+++ b/themes/one/less/uikit/pagination.less
@@ -13,12 +13,12 @@
 @pagination-background:                         transparent;
 @pagination-color:                              @global-muted-color;
 @pagination-hover-background:                   transparent;
-@pagination-hover-color:                        @global-color;
+@pagination-hover-color:                        @global-dark-color;
 @pagination-onclick-background:                 transparent;
-@pagination-onclick-color:                      @global-color;
+@pagination-onclick-color:                      @global-dark-color;
 
 @pagination-active-background:                  transparent;
-@pagination-active-color:                       @global-color;
+@pagination-active-color:                       @global-dark-color;
 
 @pagination-disabled-background:                transparent;
 @pagination-disabled-color:                     @global-muted-color;
