--- a/themes/one/less/uikit/subnav.less
+++ b/themes/one/less/uikit/subnav.less
@@ -41,7 +41,7 @@
 // Modifier: `uk-subnav-pill`
 // ========================================================================
 
-.hook-subnav-pill() { border-radius: @global-border-radius; }
+.hook-subnav-pill() {}
 
 .hook-subnav-pill-hover() {}
 
