--- a/themes/one/less/uikit/thumbnail.less
+++ b/themes/one/less/uikit/thumbnail.less
@@ -18,7 +18,7 @@
 // Component
 // ========================================================================
 
-.hook-thumbnail() { border-radius: @global-border-radius; }
+.hook-thumbnail() {}
 
 .hook-thumbnail-hover() {}
 
