--- a/themes/one/less/uikit/variables.less
+++ b/themes/one/less/uikit/variables.less
@@ -13,16 +13,17 @@
 // Text
 //
 
-@global-color:                                  #444;
-@global-muted-color:                            #999;
+@global-color:                                  #888888;
+@global-muted-color:                            #adadad;
 
 @global-link-color:                             #4091D2;
 @global-link-hover-color:                       #4587BE;
 
+@global-dark-color:                             #525255;
 @global-contrast-color:                         #fff;
 
 @global-font-size:                              16px;
-@global-line-height:                            22px;
+@global-line-height:                            26px;
 
 //
 // Backgrounds & Borders
@@ -30,8 +31,6 @@
 
 @global-background:                             #fff;
 @global-border:                                 #e5e5e5;
-
-@global-border-radius:                          2px;
 
 @global-default-background:                     #f5f5f5;
 @global-default-hover-background:               #fafafa;
