--- a/themes/one/less/uikit/accordion.less
+++ b/themes/one/less/uikit/accordion.less
@@ -30,10 +30,7 @@
 // Modifier: `uk-accordion-title`
 // ========================================================================
 
-.hook-accordion-title() {
-	border: 1px solid @accordion-title-border;
-	border-radius: @global-border-radius;
-}
+.hook-accordion-title() { border: 1px solid @accordion-title-border; }
 
 
 // Modifier: `uk-accordion-content`
