--- a/themes/one/less/uikit/badge.less
+++ b/themes/one/less/uikit/badge.less
@@ -7,27 +7,33 @@
 // Variables
 // ========================================================================
 
-@badge-background:                              transparent;
-@badge-padding-horizontal:                      10px;
+@badge-background:                              @global-primary-background;
+@badge-padding-horizontal:                      15px;
 @badge-font-size:                               round((@global-font-size * 0.78)); // 11px / 12px
-@badge-font-weight:                             normal;
+@badge-font-weight:                             600;
 @badge-line-height:                             round((@badge-font-size * 2)); // 22px / 24px
-@badge-color:                                   @global-primary-background;
+@badge-color:                                   @global-contrast-color;
 @badge-text-transform:                          uppercase;
-@badge-hover-color:                             @global-primary-background;
+@badge-hover-color:                             @global-contrast-color;
 
 @badge-notification-font-size:                  round((@global-font-size * 0.78)); // 11px / 12px
 @badge-notification-line-height:                round((@badge-notification-font-size * 1.81)); // 20px / 22px
 
-@badge-success-background:                      transparent;
-@badge-warning-background:                      transparent;
-@badge-danger-background:                       transparent;
+@badge-success-background:                      @global-success-background;
+@badge-warning-background:                      @global-warning-background;
+@badge-danger-background:                       @global-danger-background;
+
+//
+// New
+//
+
+@badge-padding-vertical:                         5px;
 
 
 // Component
 // ========================================================================
 
-.hook-badge() { border: 1px solid @global-primary-background; }
+.hook-badge() { padding: @badge-padding-vertical @badge-padding-horizontal; }
 
 
 // Color modifier
@@ -37,28 +43,19 @@
 // Modifier: `badge-success`
 //
 
-.hook-badge-success() {
-    border-color: @global-success-background;
-    color: @global-success-background;
-}
+.hook-badge-success() {}
 
 //
 // Modifier: `badge-warning`
 //
 
-.hook-badge-warning() {
-    border-color: @global-warning-background;
-    color: @global-warning-background;
-}
+.hook-badge-warning() {}
 
 //
 // Modifier: `badge-danger`
 //
 
-.hook-badge-danger() {
-    border-color: @global-danger-background;
-    color: @global-danger-background;
-}
+.hook-badge-danger() {}
 
 
 // Miscellaneous
