--- a/themes/one/less/uikit/button.less
+++ b/themes/one/less/uikit/button.less
@@ -26,7 +26,7 @@
 @button-small-padding-horizontal:               12px;
 @button-large-padding-horizontal:               20px;
 
-@button-font-size:                              13px;
+@button-font-size:                              @global-font-size;
 @button-background:                             transparent;
 @button-color:                                  @global-muted-color;
 @button-hover-background:                       transparent;
@@ -68,10 +68,7 @@
 // ========================================================================
 
 .hook-button() {
-    min-width: 90px;
     border: 1px solid lighten(@button-color, 10%);
-    border-radius: @global-border-radius;
-    text-transform: uppercase;
     -webkit-transition: all 0.05s linear;
     transition: all 0.05s linear;
 }
@@ -124,7 +121,7 @@
 // Modifier: `uk-button-link`
 // ========================================================================
 
-.hook-button-link() { min-width: inherit; }
+.hook-button-link() {}
 
 
 // Size modifiers
@@ -142,25 +139,6 @@
 
     /* Sub-object `uk-button-group`
      ========================================================================== */
-
-    /*
-     * Reset border-radius
-     */
-
-    .uk-button-group > .uk-button:not(:first-child):not(:last-child),
-    .uk-button-group > div:not(:first-child):not(:last-child) .uk-button { border-radius: 0; }
-
-    .uk-button-group > .uk-button:first-child,
-    .uk-button-group > div:first-child .uk-button {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
-    }
-
-    .uk-button-group > .uk-button:last-child,
-    .uk-button-group > div:last-child .uk-button {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-    }
 
     /*
      * Collapse border
