--- a/themes/one/less/uikit/comment.less
+++ b/themes/one/less/uikit/comment.less
@@ -24,13 +24,9 @@
 // New
 //
 
-@comment-padding:                               10px;
-@comment-border:                                @global-border;
-@comment-background:                            #fafafa;
+@comment-primary-padding:                        @global-margin;
+@comment-primary-background:                     @global-default-hover-background;
 
-@comment-primary-border:                        fade(@comment-primary-color, 30%);
-@comment-primary-background:                    #ebf7fd;
-@comment-primary-color:                         #2d7091;
 
 
 // Component
@@ -42,12 +38,7 @@
 // Sub-object `uk-comment-header`
 // ========================================================================
 
-.hook-comment-header() {
-    padding: @comment-padding;
-    border: 1px solid @comment-border;
-    border-radius: @global-border-radius;
-    background: @comment-background;
-}
+.hook-comment-header() {}
 
 
 // Sub-object `uk-comment-avatar`
@@ -59,7 +50,7 @@
 // Sub-object `uk-comment-title`
 // ========================================================================
 
-.hook-comment-title() {}
+.hook-comment-title() { font-weight: 400; }
 
 
 // Sub-object `uk-comment-meta`
@@ -71,27 +62,19 @@
 // Sub-object `uk-comment-body`
 // ========================================================================
 
-.hook-comment-body() {
-    padding-left: @comment-padding;
-    padding-right: @comment-padding;
-}
+.hook-comment-body() {}
 
 
 // Sub-object `uk-comment-primary`
 // ========================================================================
 
-.hook-comment-primary() {}
+.hook-comment-primary() {
+    padding: @comment-primary-padding;
+    background: @comment-primary-background;
+}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-comment-misc() {
-
-    .uk-comment-primary .uk-comment-header {
-        border-color: @comment-primary-border;
-        background-color: @comment-primary-background;
-        color: @comment-primary-color;
-    }
-
-}
+.hook-comment-misc() {}
