--- a/themes/one/less/uikit/navbar.less
+++ b/themes/one/less/uikit/navbar.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@navbar-background:                             #fafafa;
+@navbar-background:                             @global-background;
 @navbar-color:                                  @global-muted-color;
 @navbar-link-color:                             @global-muted-color;
 @navbar-link-hover-color:                       @global-color;
@@ -18,14 +18,14 @@
 @navbar-nav-font-size:                          @global-font-size;
 @navbar-nav-font-family:                        "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 @navbar-nav-hover-background:                   transparent;
-@navbar-nav-hover-color:                        @global-color;
+@navbar-nav-hover-color:                        @global-dark-color;
 @navbar-nav-onclick-background:                 transparent;
-@navbar-nav-onclick-color:                      @global-color;
+@navbar-nav-onclick-color:                      @global-dark-color;
 @navbar-nav-active-background:                  transparent;
-@navbar-nav-active-color:                       @global-color;
+@navbar-nav-active-color:                       @global-dark-color;
 
 @navbar-brand-font-size:                        round((@global-font-size * 1.28)); // 18px / 20px
-@navbar-brand-color:                            @global-color;
+@navbar-brand-color:                            @global-dark-color;
 @navbar-brand-hover-color:                      @global-color;
 
 @navbar-toggle-font-size:                       round((@global-font-size * 1.28)); // 18px / 20px
@@ -36,7 +36,7 @@
 // Component
 // ========================================================================
 
-.hook-navbar() {}
+.hook-navbar() { box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15); }
 
 
 // Sub-object: `uk-navbar-nav`
@@ -72,6 +72,6 @@
      * `uk-navbar-brand`
      */
 
-    .uk-navbar-brand { font-weight: 300; }
+    .uk-navbar-brand {}
 
 }
