--- a/themes/one/less/uikit/utility.less
+++ b/themes/one/less/uikit/utility.less
@@ -17,8 +17,8 @@
 
 @utility-heading-large-small-font-size:         round((@global-font-size * 2.6)); // 36px / 42px
 @utility-heading-large-small-line-height:       round((@utility-heading-large-small-font-size * 1.154)); // 42px / 48px
-@utility-heading-large-font-size:               round((@global-font-size * 3.72)); // 52px / 60px
-@utility-heading-large-line-height:             round((@utility-heading-large-font-size * 1.23)); // 64px / 74px
+@utility-heading-large-font-size:               round((@global-font-size * 2.875)); // 46px
+@utility-heading-large-line-height:             round((@utility-heading-large-font-size * 1.30)); // 60px
 
 @utility-link-muted-color:                      @global-color;
 @utility-link-muted-hover-color:                @global-color;
