--- a/app/system/modules/site/app/templates/settings.html
+++ b/app/system/modules/site/app/templates/settings.html
@@ -1,7 +1,7 @@
 <div class="uk-form-row">
-    <label for="form-title" class="uk-form-label">{{ 'Title' | trans }}</label>
+    <label for="form-menu-title" class="uk-form-label">{{ 'Menu Title' | trans }}</label>
     <div class="uk-form-controls">
-        <input id="form-title" class="uk-form-width-large" type="text" name="title" v-model="node.title" v-valid="required">
+        <input id="form-menu-title" class="uk-form-width-large" type="text" name="title" v-model="node.title" v-valid="required">
         <div class="uk-form-help-block uk-text-danger" v-show="form.title.invalid">{{ 'Invalid name.' | trans }}</div>
     </div>
 </div>
