--- a/themes/one/less/uikit/block.less
+++ b/themes/one/less/uikit/block.less
@@ -7,6 +7,8 @@
 // Variables
 // ========================================================================
 
+@block-padding-vertical-large:                  100px;
+
 @block-default-background:                      @global-background;
 
 
