--- a/themes/one/less/uikit/navbar.less
+++ b/themes/one/less/uikit/navbar.less
@@ -36,7 +36,7 @@
 // Component
 // ========================================================================
 
-.hook-navbar() { box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15); }
+.hook-navbar() {}
 
 
 // Sub-object: `uk-navbar-nav`
