updated pagekit-one theme

--- a/themes/one/less/uikit/subnav.less
+++ b/themes/one/less/uikit/subnav.less
@@ -9,8 +9,8 @@
 
 @subnav-margin-horizontal:                      20px;
 @subnav-color:                                  @global-color;
-@subnav-hover-color:                            @global-link-color;
-@subnav-active-color:                           @global-link-color;
+@subnav-hover-color:                            @global-dark-color;
+@subnav-active-color:                           @global-dark-color;
 
 @subnav-line-border:                            @global-border;
 
