--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -13,13 +13,16 @@
 
 html { overflow-y: scroll; }
 
+body { background: @block-secondary-background; }
 
 /* Navbar
  ========================================================================== */
 
 .tm-navbar {
+    position: relative;
     background: @navbar-background;
     box-shadow: 0px 3px 8px -4px rgba(0,0,0,0.15);
+    z-index: 1;
 }
 
 /* Navbar as overlay */
