added nestable active style

--- a/app/system/modules/theme/less/uikit/nestable.less
+++ b/app/system/modules/theme/less/uikit/nestable.less
@@ -61,4 +61,6 @@
 
     .uk-collapsed .uk-nestable-toggle { background-image: url("@{global-image-path}/caret-right.svg"); }
 
+    .uk-active > .uk-nestable-panel { background: #fff; }
+
 }
