better image + video picker fields

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -505,6 +505,16 @@
 }
 
 
+/* Background Contain (Finder: Thumbnail)
+ ========================================================================== */
+
+.pk-background-contain {
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+
 /* Panel Teaser
  ========================================================================== */
 
@@ -526,16 +536,6 @@
 }
 
 .pk-overlay-background { background: rgba(255,255,255,0.2); }
-
-
-/* Panel Background (Dashboard)
- ========================================================================== */
-
-.pk-background-contain {
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
 
 
 /* Modal with IFrame (Marketplace)
