reset uikit theme nav header padding

--- a/app/system/modules/theme/less/uikit/nav.less
+++ b/app/system/modules/theme/less/uikit/nav.less
@@ -10,8 +10,8 @@
 @nav-padding-vertical:                          6px;
 @nav-padding-horizontal:                        25px;
 
-@nav-header-padding-vertical:                   8px;
-@nav-header-padding-horizontal:                 0;
+@nav-header-padding-vertical:                   @nav-padding-vertical;
+@nav-header-padding-horizontal:                 @nav-padding-horizontal;
 @nav-header-font-size:                          round((@global-font-size * 0.85)); // 12px / 14px
 @nav-header-font-weight:                        normal;
 @nav-header-margin-top:                         @global-margin;
