added helper class for widget assignment

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -587,6 +587,16 @@
 .pk-form-link > input { padding-right: 100px !important; }
 
 
+/* List Header (Widget Assignment)
+ ========================================================================== */
+
+.pk-list-header {
+    padding: 8px 0;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+
 /* Editor (Site: Settings)
 ========================================================================== */
 
