updated site theme icon

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -240,6 +240,7 @@
 .pk-icon-large-database { background-image: url("../../assets/images/icon-large-database.svg"); }
 .pk-icon-large-lock-file { background-image: url("../../assets/images/icon-large-lock-file.svg"); }
 .pk-icon-large-comment { background-image: url("../../assets/images/icon-large-comment.svg"); }
+.pk-icon-large-brush { background-image: url("../../assets/images/icon-large-brush.svg"); }
 
 /*
  * Link Hover with Icon and Text (Link Picker + Blog)
