added active state for icon-hover

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -202,7 +202,9 @@
  */
 
 .pk-icon-hover { opacity: 0.5; }
-.pk-icon-hover:hover { opacity: 1; }
+
+.pk-icon-hover:hover,
+.uk-active > .pk-icon-hover { opacity: 1; }
 
 /*
  * Icon Muted
