added hero image + navbar options as page settings

--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -35,6 +35,7 @@ html { overflow-y: scroll; }
 .tm-navbar-transparent {
     border-bottom-color: transparent;
     background: transparent;
+    box-shadow: none;
 }
 
 .tm-navbar-transparent .uk-navbar { background: none; }
@@ -78,6 +79,7 @@ html { overflow-y: scroll; }
  ========================================================================== */
 
 .tm-block-height { min-height: ~"calc(100vh - 81px)"; }
+
 
 /*
  * Footer
