--- a/themes/one/less/uikit/comment.less
+++ b/themes/one/less/uikit/comment.less
@@ -11,12 +11,14 @@
 
 @comment-avatar-margin-right:                   @global-margin;
 
-@comment-title-font-size:                       round((@global-font-size * 1.14)); // 16px / 18px
-@comment-title-line-height:                     round((@comment-title-font-size * 1.36)); // 22px / 24px
+@comment-title-margin-top:                      0;
+@comment-title-font-size:                       @global-font-size;
+@comment-title-line-height:                     @global-line-height;
 
+@comment-meta-margin-top:                       0;
 @comment-meta-color:                            @global-muted-color;
-@comment-meta-font-size:                        round((@global-font-size * 0.78)); // 11px / 12px
-@comment-meta-line-height:                      round((@comment-meta-font-size * 1.49)); // 16px / 18px
+@comment-meta-font-size:                        round((@global-font-size * 0.78)); // 12px
+@comment-meta-line-height:                      round((@comment-meta-font-size * 1.49)); // 18px
 
 @comment-list-margin-top:                       @global-margin + 10px;
 
