--- a/themes/one/less/uikit/form.less
+++ b/themes/one/less/uikit/form.less
@@ -43,6 +43,7 @@
 
 @form-blank-border:                             @global-border;
 
+@form-stacked-margin-bottom:                    10px;
 @form-stacked-font-weight:                      normal;
 
 @form-horizontal-label-margin-top:              7px;
