--- a/themes/one/less/uikit/base.less
+++ b/themes/one/less/uikit/base.less
@@ -27,24 +27,24 @@
 @base-heading-font-weight:                      300;
 @base-heading-color:                            @global-dark-color;
 @base-heading-margin-top:                       @global-margin-large;
-@base-h1-font-size:                             round((@global-font-size * 2.6)); // 36px / 42px
-@base-h1-line-height:                           round((@base-h1-font-size * 1.154)); // 42px / 48px
-@base-h2-font-size:                             round((@global-font-size * 1.74)); // 24px / 28px
-@base-h2-line-height:                           round((@base-h2-font-size * 1.27)); // 30px / 36px
-@base-h3-font-size:                             round((@global-font-size * 1.28)); // 18px / 20px
-@base-h3-line-height:                           round((@base-h3-font-size * 1.32)); // 24px / 26px
-@base-h4-font-size:                             round((@global-font-size * 1.14)); // 16px / 18px
-@base-h4-line-height:                           round((@base-h4-font-size * 1.36)); // 22px / 24px
-@base-h5-font-size:                             @global-font-size; // 14px / 16px
-@base-h5-line-height:                           @global-line-height; // 20px / 22px
-@base-h6-font-size:                             round((@global-font-size * 0.85)); // 12px / 14px
-@base-h6-line-height:                           round((@base-h6-font-size * 1.46)); // 18px / 20px
+@base-h1-font-size:                             round((@global-font-size * 2.6)); // 42px
+@base-h1-line-height:                           round((@base-h1-font-size * 1.33)); // 56px
+@base-h2-font-size:                             round((@global-font-size * 1.74)); // 28px
+@base-h2-line-height:                           round((@base-h2-font-size * 1.27)); // 36px
+@base-h3-font-size:                             round((@global-font-size * 1.375)); // 22px
+@base-h3-line-height:                           round((@base-h3-font-size * 1.545)); // 26px
+@base-h4-font-size:                             round((@global-font-size * 1.14)); // 18px
+@base-h4-line-height:                           round((@base-h4-font-size * 1.36)); // 24px
+@base-h5-font-size:                             @global-font-size; // 16px
+@base-h5-line-height:                           @global-line-height; // 22px
+@base-h6-font-size:                             round((@global-font-size * 0.85)); // 14px
+@base-h6-line-height:                           round((@base-h6-font-size * 1.46)); // 20px
 
 @base-hr-border:                                @global-border;
 
 @base-blockquote-border:                        @global-border;
-@base-blockquote-font-size:                     round((@global-font-size * 1.14)); // 16px / 18px
-@base-blockquote-line-height:                   round((@base-blockquote-font-size * 1.36)); // 22px / 24px
+@base-blockquote-font-size:                     round((@global-font-size * 1.14)); // 18px
+@base-blockquote-line-height:                   round((@base-blockquote-font-size * 1.36)); // 24px
 
 @base-code-color:                               #f0615c;
 @base-code-font-size:                           12px;
@@ -92,11 +92,11 @@
 
 .hook-base-h3() {}
 
-.hook-base-h4() {}
+.hook-base-h4() { font-weight: normal; }
 
-.hook-base-h5() {}
+.hook-base-h5() { font-weight: normal; }
 
-.hook-base-h6() {}
+.hook-base-h6() { font-weight: normal; }
 
 
 // Preformatted text
