--- a/app/system/modules/finder/app/templates/table.html
+++ b/app/system/modules/finder/app/templates/table.html
@@ -20,7 +20,7 @@
         <tr v-repeat="files | searched" class="uk-visible-hover" v-class="uk-active: isSelected(name)" v-on="click: toggleSelect">
             <td><input type="checkbox" name="name" value="{{ name }}" v-checkbox="selected"></td>
             <td class="pk-table-width-minimum">
-                <i v-if="isImage(url)" class="pk-icon-contain" v-lazy-background="$url.static(url)"></i>
+                <i v-if="isImage(url)" class="pk-icon-contain" v-lazy-background="$url(url)"></i>
                 <i v-if="!isImage(url)" class="pk-icon-file-circle"></i>
             </td>
             <td class="pk-table-text-break pk-table-min-width-200">{{ name }}</td>
