--- a/app/system/modules/finder/app/templates/thumbnail.html
+++ b/app/system/modules/finder/app/templates/thumbnail.html
@@ -16,7 +16,7 @@
     <li v-repeat="files | searched">
         <div class="uk-panel uk-panel-box uk-text-center" v-on="click: toggleSelect">
             <div class="uk-panel-teaser uk-position-relative">
-                <div class="pk-background-contain uk-position-cover" v-if="isImage(path)" v-lazy-background="$url.static(url)"></div>
+                <div class="pk-background-contain uk-position-cover" v-if="isImage(path)" v-lazy-background="$url(url)"></div>
                 <div class="uk-cover-background uk-position-cover pk-thumbnail-file" v-if="!isImage(path)"></div>
                 <canvas class="uk-responsive-width uk-display-block" width="800" height="600"></canvas>
             </div>
