--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -7,6 +7,8 @@
    Theme
  ========================================================================== */
 
+[v-cloak] { display: none; }
+
 /*
  * Force vertical scrollbar
  */
