fixed uikit global image path in one theme

--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -1,7 +1,7 @@
 @import "uikit/uikit.less";
 
 @icon-font-path: "../../../../../vendor/assets/uikit/fonts";
-@global-image-path: '../../images';
+@global-image-path: '../../less/uikit/images';
 
 /* ========================================================================
    Theme
