updated site settings maintenance icon

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -243,6 +243,7 @@
 .pk-icon-large-lock-file { background-image: url("../../assets/images/icon-large-lock-file.svg"); }
 .pk-icon-large-comment { background-image: url("../../assets/images/icon-large-comment.svg"); }
 .pk-icon-large-brush { background-image: url("../../assets/images/icon-large-brush.svg"); }
+.pk-icon-large-cone { background-image: url("../../assets/images/icon-large-cone.svg"); }
 
 /*
  * Link Hover with Icon and Text (Link Picker + Blog)
