--- a/themes/one/less/theme.less
+++ b/themes/one/less/theme.less
@@ -33,7 +33,7 @@ html { overflow-y: scroll; }
     width: 100%;
 }
 
-// Transparent background
+/* Transparent background */
 .tm-navbar-transparent {
     border-bottom-color: transparent;
     background: transparent;
@@ -42,7 +42,9 @@ html { overflow-y: scroll; }
 
 .tm-navbar-transparent .uk-navbar { background: none; }
 
-// Contrast color
+/*
+ * Contrast color
+ */
 
 .tm-logo-contrast { display: none; }
 
