--- a/app/system/modules/theme/less/uikit/dropdown.less
+++ b/app/system/modules/theme/less/uikit/dropdown.less
@@ -34,6 +34,12 @@
 .hook-dropdown-navbar() {}
 
 
+// Sub-object: `uk-dropdown-overlay`
+// ========================================================================
+
+.hook-dropdown-overlay() {}
+
+
 // Miscellaneous
 // ========================================================================
 
