--- a/themes/one/less/uikit/icon.less
+++ b/themes/one/less/uikit/icon.less
@@ -8,7 +8,7 @@
 // ========================================================================
 
 @icon-hover-color:                              @global-muted-color;
-@icon-hover-hover-color:                        @global-color;
+@icon-hover-hover-color:                        @global-dark-color;
 
 @icon-button-height:                            @icon-button-width;
 @icon-button-background:                        @global-primary-background;
