--- a/themes/one/less/uikit/variables.less
+++ b/themes/one/less/uikit/variables.less
@@ -16,8 +16,8 @@
 @global-color:                                  #888888;
 @global-muted-color:                            #adadad;
 
-@global-link-color:                             #4091D2;
-@global-link-hover-color:                       #4587BE;
+@global-link-color:                             #525252;
+@global-link-hover-color:                       #525252;
 
 @global-dark-color:                             #525255;
 @global-contrast-color:                         #fff;
