added min-width to overlay to make delete always visible for the image picker

--- a/app/system/modules/theme/less/uikit/overlay.less
+++ b/app/system/modules/theme/less/uikit/overlay.less
@@ -46,9 +46,10 @@
 .hook-overlay-misc() {
 
     .uk-overlay {
-    	min-height: 100px;
-    	/* Reset fix because it causes a 1px gap */
-    	-webkit-transform: none;
+        min-height: 100px;
+        min-width: 70px;
+        /* Reset fix because it causes a 1px gap */
+        -webkit-transform: none;
     }
 
 }
