html editor preview background is white now

--- a/app/system/modules/theme/less/uikit/htmleditor.less
+++ b/app/system/modules/theme/less/uikit/htmleditor.less
@@ -22,7 +22,7 @@
 @htmleditor-navbar-nav-active-color:          darken(@global-color, 20%);
 
 @htmleditor-content-border:                   @global-border;
-@htmleditor-content-background:               @global-background;
+@htmleditor-content-background:               #fff;
 
 @htmleditor-fullscreen-z-index:               @global-z-index - 10;
 
