fixed cursor in navigation dropdown in admin theme

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -163,7 +163,7 @@ body {
 /* Dropdown
  ========================================================================== */
 
-[data-uk-dropdown*='click'] { cursor: pointer; }
+.tm-cursor-pointer:hover { cursor: pointer; }
 
 /*
  * Dropdown with Sortable Icons
