fixed asset path in admin theme

--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -1,7 +1,7 @@
 @import "uikit/uikit.less";
 @import "../../../assets/less/pagekit.less";
 
-@icon-font-path: "../../../../../vendor/assets/uikit/fonts";
+@icon-font-path: "../../../../../assets/uikit/fonts";
 @global-image-path: '../../images';
 
 /* ========================================================================
