--- a/app/system/modules/theme/less/uikit/uikit.less
+++ b/app/system/modules/theme/less/uikit/uikit.less
@@ -1,34 +1,34 @@
 // UIkit
 // ========================================================================
 
-@import "../../../../../../vendor/assets/uikit/less/uikit.less";
+@import "../../../../../assets/uikit/less/uikit.less";
 
 // Components: Navs
-@import "../../../../../../vendor/assets/uikit/less/components/dotnav.less";
-@import "../../../../../../vendor/assets/uikit/less/components/slidenav.less";
+@import "../../../../../assets/uikit/less/components/dotnav.less";
+@import "../../../../../assets/uikit/less/components/slidenav.less";
 
 // Components: Common
-@import "../../../../../../vendor/assets/uikit/less/components/form-advanced.less";
-@import "../../../../../../vendor/assets/uikit/less/components/form-file.less";
-@import "../../../../../../vendor/assets/uikit/less/components/form-password.less";
-@import "../../../../../../vendor/assets/uikit/less/components/form-select.less";
-@import "../../../../../../vendor/assets/uikit/less/components/placeholder.less";
-@import "../../../../../../vendor/assets/uikit/less/components/progress.less";
+@import "../../../../../assets/uikit/less/components/form-advanced.less";
+@import "../../../../../assets/uikit/less/components/form-file.less";
+@import "../../../../../assets/uikit/less/components/form-password.less";
+@import "../../../../../assets/uikit/less/components/form-select.less";
+@import "../../../../../assets/uikit/less/components/placeholder.less";
+@import "../../../../../assets/uikit/less/components/progress.less";
 
 // Components: JavaScript
-@import "../../../../../../vendor/assets/uikit/less/components/accordion.less";
-@import "../../../../../../vendor/assets/uikit/less/components/autocomplete.less";
-@import "../../../../../../vendor/assets/uikit/less/components/datepicker.less";
-@import "../../../../../../vendor/assets/uikit/less/components/htmleditor.less";
-@import "../../../../../../vendor/assets/uikit/less/components/slider.less";
-@import "../../../../../../vendor/assets/uikit/less/components/slideshow.less";
-@import "../../../../../../vendor/assets/uikit/less/components/notify.less";
-@import "../../../../../../vendor/assets/uikit/less/components/search.less";
-@import "../../../../../../vendor/assets/uikit/less/components/nestable.less";
-@import "../../../../../../vendor/assets/uikit/less/components/sortable.less";
-@import "../../../../../../vendor/assets/uikit/less/components/sticky.less";
-@import "../../../../../../vendor/assets/uikit/less/components/upload.less";
-@import "../../../../../../vendor/assets/uikit/less/components/tooltip.less";
+@import "../../../../../assets/uikit/less/components/accordion.less";
+@import "../../../../../assets/uikit/less/components/autocomplete.less";
+@import "../../../../../assets/uikit/less/components/datepicker.less";
+@import "../../../../../assets/uikit/less/components/htmleditor.less";
+@import "../../../../../assets/uikit/less/components/slider.less";
+@import "../../../../../assets/uikit/less/components/slideshow.less";
+@import "../../../../../assets/uikit/less/components/notify.less";
+@import "../../../../../assets/uikit/less/components/search.less";
+@import "../../../../../assets/uikit/less/components/nestable.less";
+@import "../../../../../assets/uikit/less/components/sortable.less";
+@import "../../../../../assets/uikit/less/components/sticky.less";
+@import "../../../../../assets/uikit/less/components/upload.less";
+@import "../../../../../assets/uikit/less/components/tooltip.less";
 
 
 // Theme
