--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -103,6 +103,7 @@ body {
 
 [class*='tm-icon-']:hover { opacity: 1; }
 
+.tm-icon-chat { background-image: url("../images/icon-chat.svg"); }
 .tm-icon-visit { background-image: url("../images/icon-visit.svg"); }
 .tm-icon-logout { background-image: url("../images/icon-logout.svg"); }
 .tm-icon-menu { background-image: url("../images/icon-menu.svg"); }
