--- a/app/system/modules/finder/app/templates/table.html
+++ b/app/system/modules/finder/app/templates/table.html
@@ -7,7 +7,7 @@
     </thead>
     <tbody>
 
-        <tr v-repeat="folders | searched" class="uk-visible-hover" v-class="uk-active: isSelected(name)" v-on="click: toggleSelect">
+        <tr v-repeat="folders | searched" class="uk-visible-hover" :class="{'uk-active': isSelected(name)}" v-on="click: toggleSelect">
             <td><input type="checkbox" name="name" value="{{ name }}" v-checkbox="selected"></td>
             <td class="pk-table-width-minimum">
                 <i class="pk-icon-folder-circle"></i>
@@ -17,11 +17,11 @@
             <td></td>
         </tr>
 
-        <tr v-repeat="files | searched" class="uk-visible-hover" v-class="uk-active: isSelected(name)" v-on="click: toggleSelect">
+        <tr v-repeat="files | searched" class="uk-visible-hover" :class="{'uk-active': isSelected(name)}" v-on="click: toggleSelect">
             <td><input type="checkbox" name="name" value="{{ name }}" v-checkbox="selected"></td>
             <td class="pk-table-width-minimum">
                 <i v-if="isImage(url)" class="pk-icon-contain" v-lazy-background="$url(url)"></i>
-                <i v-if="!isImage(url)" class="pk-icon-file-circle"></i>
+                <i v-else class="pk-icon-file-circle"></i>
             </td>
             <td class="pk-table-text-break pk-table-min-width-200">{{ name }}</td>
             <td class="uk-text-right uk-text-nowrap">{{ size }}</td>
