--- a/app/system/modules/finder/app/templates/thumbnail.html
+++ b/app/system/modules/finder/app/templates/thumbnail.html
@@ -17,7 +17,7 @@
         <div class="uk-panel uk-panel-box uk-text-center" v-on="click: toggleSelect">
             <div class="uk-panel-teaser uk-position-relative">
                 <div class="pk-background-contain uk-position-cover" v-if="isImage(path)" v-lazy-background="$url(url)"></div>
-                <div class="uk-cover-background uk-position-cover pk-thumbnail-file" v-if="!isImage(path)"></div>
+                <div class="uk-cover-background uk-position-cover pk-thumbnail-file" v-else></div>
                 <canvas class="uk-responsive-width uk-display-block" width="800" height="550"></canvas>
             </div>
             <div class="uk-text-nowrap uk-text-truncate">
